modify index.html & scss folder
-change soe texts in index.html
-delete scss folder

--- a/RentAdvisor/RentAdvisor/index.html
+++ b/RentAdvisor/RentAdvisor/index.html
@@ -59,10 +59,10 @@
                 <div class="aa-header-left">
                   <div class="aa-telephone-no">
                     <span class="fa fa-phone"></span>
-                    1-900-523-3564
+                    071-xxx-xx-xx
                   </div>
                   <div class="aa-email hidden-xs">
-                    <span class="fa fa-envelope-o"></span> info@markups.com
+                    <span class="fa fa-envelope-o"></span> info@rentadvisor.com
                   </div>
                 </div>              
               </div>
@@ -107,8 +107,7 @@
                 <li><a href="properties.html">PROPERTIES</a></li>
                 <li><a href="properties-detail.html">PROPERTIES DETAIL</a></li>                                            
               </ul>
-            </li>
-            <li><a href="gallery.html">GALLERY</a></li>                                         
+            </li>                                         
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">BLOG <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">                
@@ -116,8 +115,8 @@
                 <li><a href="blog-single.html">BLOG DETAILS</a></li>                                            
               </ul>
             </li>
-            <li><a href="contact.html">CONTACT</a></li>
-           <li><a href="404.html">404 PAGE</a></li>
+            <li><a href="contact.html">CONTATTI</a></li>
+           <li><a href="404.html">FAQ</a></li>
           </ul>                            
         </div><!--/.nav-collapse -->       
       </div>          
