ultimate mock-ups

--- a/RentAdvisor/RentAdvisor/index.html
+++ b/RentAdvisor/RentAdvisor/index.html
@@ -227,17 +227,15 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="aa-single-advance-search">
-                  <input type="text" placeholder="Type Your Location">
+                  <input type="text" placeholder="Scegli una città di ricerca">
                 </div>
               </div>
               <div class="col-md-2">
                 <div class="aa-single-advance-search">
                   <select>
-                   <option value="0" selected>Category</option>
-                    <option value="1">Flat</option>
-                    <option value="2">Land</option>
-                    <option value="3">Plot</option>
-                    <option value="4">Commercial</option>
+                   <option value="0" selected>Alloggio</option>
+                    <option value="1">Appartamento</option>
+                    <option value="2">Posto letto</option>
                   </select>
                 </div>
               </div>
