Prima realizzazione pagine html

--- a/RentAdvisor/RentAdvisor/index.html
+++ b/RentAdvisor/RentAdvisor/index.html
@@ -48,6 +48,7 @@
     <a class="scrollToTop" href="#"><i class="fa fa-angle-double-up"></i></a>
   <!-- END SCROLL TOP BUTTON -->
 
+<!-- HOME LIVELLO 0 -->
   <!-- Start header section -->
   <header id="aa-header">  
     <div class="container">
@@ -59,7 +60,7 @@
                 <div class="aa-header-left">
                   <div class="aa-telephone-no">
                     <span class="fa fa-phone"></span>
-                    071-xxx-xx-xx
+                    071 419 0330
                   </div>
                   <div class="aa-email hidden-xs">
                     <span class="fa fa-envelope-o"></span> info@rentadvisor.com
@@ -101,22 +102,9 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
             <li class="active"><a href="index.html">HOME</a></li>
-             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="properties.html">PROPERTIES <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="properties.html">PROPERTIES</a></li>
-                <li><a href="properties-detail.html">PROPERTIES DETAIL</a></li>                                            
-              </ul>
-            </li>                                         
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">BLOG <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="blog-archive.html">BLOG</a></li>
-                <li><a href="blog-single.html">BLOG DETAILS</a></li>                                            
-              </ul>
-            </li>
+			<li> <a href="catalog.html">CATALOGO</a></li>
             <li><a href="contact.html">CONTATTI</a></li>
-           <li><a href="404.html">FAQ</a></li>
+           <li><a href="faq.html">FAQ</a></li>
           </ul>                            
         </div><!--/.nav-collapse -->       
       </div>          
@@ -218,87 +206,7 @@
   </section>
   <!-- End slider  -->
 
-  <!-- Advance Search -->
-  <section id="aa-advance-search">
-    <div class="container">
-      <div class="aa-advance-search-area">
-        <div class="form">
-         <div class="aa-advance-search-top">
-            <div class="row">
-              <div class="col-md-4">
-                <div class="aa-single-advance-search">
-                  <input type="text" placeholder="Scegli una città di ricerca">
-                </div>
-              </div>
-              <div class="col-md-2">
-                <div class="aa-single-advance-search">
-                  <select>
-                   <option value="0" selected>Alloggio</option>
-                    <option value="1">Appartamento</option>
-                    <option value="2">Posto letto</option>
-                  </select>
-                </div>
-              </div>
-              <div class="col-md-2">
-                 <div class="aa-single-advance-search">
-                  <select>
-                    <option value="0" selected>Type</option>
-                    <option value="1">Flat</option>
-                    <option value="2">Land</option>
-                    <option value="3">Plot</option>
-                    <option value="4">Commercial</option>
-                  </select>
-              </div>
-              </div>
-              <div class="col-md-2">
-                 <div class="aa-single-advance-search">
-                  <select>
-                    <option value="0" selected>Type</option>
-                    <option value="1">Flat</option>
-                    <option value="2">Land</option>
-                    <option value="3">Plot</option>
-                    <option value="4">Commercial</option>
-                  </select>
-              </div>
-              </div>
-              <div class="col-md-2">
-                <div class="aa-single-advance-search">
-                  <input class="aa-search-btn" type="submit" value="Search">
-                </div>
-              </div>
-            </div>
-          </div>
-         <div class="aa-advance-search-bottom">
-           <div class="row">
-            <div class="col-md-6">
-              <div class="aa-single-filter-search">
-                <span>AREA (SQ)</span>
-                <span>FROM</span>
-                <span id="skip-value-lower" class="example-val">30.00</span>
-                <span>TO</span>
-                <span id="skip-value-upper" class="example-val">100.00</span>
-                <div id="aa-sqrfeet-range" class="noUi-target noUi-ltr noUi-horizontal noUi-background">
-                </div>                  
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="aa-single-filter-search">
-                <span>PRICE ($)</span>
-                <span>FROM</span>
-                <span id="skip-value-lower2" class="example-val">30.00</span>
-                <span>TO</span>
-                <span id="skip-value-upper2" class="example-val">100.00</span>
-                <div id="aa-price-range" class="noUi-target noUi-ltr noUi-horizontal noUi-background">
-                </div>      
-              </div>
-            </div>
-          </div>  
-         </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- / Advance Search -->
+  
 
   <!-- Latest property -->
   <section id="aa-latest-property">
@@ -334,7 +242,7 @@
                     <span class="aa-price">
                       $35000
                     </span>
-                    <a href="#" class="aa-secondary-btn">View Details</a>
+                    <a href="#" class="aa-secondary-btn">Dettagli</a>
                   </div>
                 </div>
               </article>
@@ -362,7 +270,7 @@
                     <span class="aa-price">
                       $11000
                     </span>
-                    <a href="#" class="aa-secondary-btn">View Details</a>
+                    <a href="#" class="aa-secondary-btn">Dettagli</a>
                   </div>
                 </div>
               </article>
@@ -390,7 +298,7 @@
                     <span class="aa-price">
                       $15000
                     </span>
-                    <a href="#" class="aa-secondary-btn">View Details</a>
+                    <a href="#" class="aa-secondary-btn">Dettagli</a>
                   </div>
                 </div>
               </article>
@@ -418,7 +326,7 @@
                     <span class="aa-price">
                       $35000
                     </span>
-                    <a href="#" class="aa-secondary-btn">View Details</a>
+                    <a href="#" class="aa-secondary-btn">Dettagli</a>
                   </div>
                 </div>
               </article>
@@ -446,7 +354,7 @@
                     <span class="aa-price">
                       $11000
                     </span>
-                    <a href="#" class="aa-secondary-btn">View Details</a>
+                    <a href="#" class="aa-secondary-btn">Dettagli</a>
                   </div>
                 </div>
               </article>
@@ -474,7 +382,7 @@
                     <span class="aa-price">
                       $15000
                     </span>
-                    <a href="#" class="aa-secondary-btn">View Details</a>
+                    <a href="#" class="aa-secondary-btn">Dettagli</a>
                   </div>
                 </div>
               </article>
@@ -553,21 +461,6 @@
   </section>
   <!-- / Service section -->
 
-  <!-- Promo Banner Section -->
-  <section id="aa-promo-banner">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="aa-promo-banner-area">
-            <h3>Inizia ora, <br> trova subito la tua prossima casa.</h3>
-            
-            <a href="#" class="aa-view-btn">Cerca</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- / Promo Banner Section -->
 
   <!-- Our Agent Section-->
   <section id="aa-agents">
@@ -583,87 +476,16 @@
             <!-- agents content -->
             <div class="aa-agents-content">
               <ul class="aa-agents-slider">
-                <li>
-                  <div class="aa-single-agents">
-                    <div class="aa-agents-img">
-                      <img src="img/agents/agent-1.png" alt="agent member image">
-                    </div>
-                    <div class="aa-agetns-info">
-                      <h4><a href="#">Philip Smith</a></h4>
-                      <span>Top Agent</span>
-                      <div class="aa-agent-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="aa-single-agents">
-                    <div class="aa-agents-img">
-                      <img src="img/agents/agent-5.png" alt="agent member image">
-                    </div>
-                    <div class="aa-agetns-info">
-                      <h4><a href="#">Adam Barney</a></h4>
-                      <span>Expert Agent</span>
-                      <div class="aa-agent-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="aa-single-agents">
-                    <div class="aa-agents-img">
-                      <img src="img/agents/agent-3.png" alt="agent member image">
-                    </div>
-                    <div class="aa-agetns-info">
-                      <h4><a href="#">Paul Walker</a></h4>
-                      <span>Director</span>
-                      <div class="aa-agent-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="aa-single-agents">
-                    <div class="aa-agents-img">
-                      <img src="img/agents/agent-4.png" alt="agent member image">
-                    </div>
-                    <div class="aa-agetns-info">
-                      <h4><a href="#">John Smith</a></h4>
-                      <span>Jr. Agent</span>
-                      <div class="aa-agent-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                      </div>
-                    </div>
-                  </div>
-                </li>
+                
                  <li>
                   <div class="aa-single-agents">
                     <div class="aa-agents-img">
                       <img src="img/agents/agent-1.png" alt="agent member image">
                     </div>
                     <div class="aa-agetns-info">
-                      <h4><a href="#">Philip Smith</a></h4>
-                      <span>Top Agent</span>
+                      <h4><a href="#">Andrea Civitarese</a></h4>
+                      <span>Ingegnere</span>
                       <div class="aa-agent-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
                       </div>
                     </div>
                   </div>
@@ -674,13 +496,9 @@
                       <img src="img/agents/agent-5.png" alt="agent member image">
                     </div>
                     <div class="aa-agetns-info">
-                      <h4><a href="#">Adam Barney</a></h4>
-                      <span>Expert Agent</span>
+                      <h4><a href="#">Francesco Camplese</a></h4>
+                      <span>Notaio</span>
                       <div class="aa-agent-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
                       </div>
                     </div>
                   </div>
@@ -691,13 +509,9 @@
                       <img src="img/agents/agent-3.png" alt="agent member image">
                     </div>
                     <div class="aa-agetns-info">
-                      <h4><a href="#">Paul Walker</a></h4>
-                      <span>Director</span>
+                      <h4><a href="#">Federico Colleluori</a></h4>
+                      <span>Consulente</span>
                       <div class="aa-agent-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
                       </div>
                     </div>
                   </div>
@@ -708,13 +522,9 @@
                       <img src="img/agents/agent-4.png" alt="agent member image">
                     </div>
                     <div class="aa-agetns-info">
-                      <h4><a href="#">John Smith</a></h4>
-                      <span>Jr. Agent</span>
+                      <h4><a href="#">Paolo Cappelletti</a></h4>
+                      <span>Ingegnere</span>
                       <div class="aa-agent-social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
                       </div>
                     </div>
                   </div>
@@ -737,7 +547,7 @@
           <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="aa-footer-left">
-               <p>Designed by <a rel="nofollow" href="http://www.markups.io/">MarkUps.io</a></p>
+               <p>Ideato dal team di RentAdvisor</p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -750,11 +560,9 @@
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12">
               <div class="aa-footer-right">
-                <a href="#">Home</a>
-                <a href="#">Support</a>
-                <a href="#">License</a>
-                <a href="#">FAQ</a>
-                <a href="#">Privacy & Term</a>
+                <a href="index.html">Home</a>
+                <a href="faq.html">FAQ</a>
+                <a href="contact.html">Contatti</a>
               </div>
             </div>            
           </div>
