--- a/RentAdvisor/RentAdvisor/contact.html
+++ b/RentAdvisor/RentAdvisor/contact.html
@@ -66,7 +66,7 @@
                     1-900-523-3564
                   </div>
                   <div class="aa-email hidden-xs">
-                    <span class="fa fa-envelope-o"></span> info@markups.com
+                    <span class="fa fa-envelope-o"></span> info@rentadvisor.com
                   </div>
                 </div>              
               </div>
@@ -103,24 +103,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
-            <li><a href="index.html">HOME</a></li>
-             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="properties.html">PROPERTIES <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="properties.html">PROPERTIES</a></li>
-                <li><a href="properties-detail.html">PROPERTIES DETAIL</a></li>                                            
-              </ul>
-            </li>
-            <li><a href="gallery.html">GALLERY</a></li>                                        
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">BLOG <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="blog-archive.html">BLOG</a></li>
-                <li><a href="blog-single.html">BLOG DETAILS</a></li>                                            
-              </ul>
-            </li>
-            <li class="active"><a href="contact.html">CONTACT</a></li>
-            <li><a href="404.html">404 PAGE</a></li>            
+            <li class="active"><a href="index.html">HOME</a></li>
+            <li> <a href="catalog.html">CATALOGO</a></li>
+            <li ><a href="contact.html">CONTATTI</a></li>
+            <li><a href="faq.html">FAQ</a></li>            
           </ul>                          
         </div><!--/.nav-collapse -->       
       </div>          
@@ -135,7 +121,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="aa-property-header-inner">
-            <h2>Contact</h2>
+            <h2>CONTATTI</h2>
             <ol class="breadcrumb">
             <li><a href="index.html">HOME</a></li>            
             <li class="active">Contatti</li>
@@ -154,7 +140,7 @@
           <div class="aa-contact-area">
             <div class="aa-contact-top">
               <div class="aa-contact-top-left">
-                <iframe width="100%" height="450" frameborder="0" allowfullscreen="" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6851.201919469417!2d-86.11773906635584!3d33.47324776828677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x888bdb60cc49c571%3A0x40451ca6baf275c7!2s36008+AL-77%2C+Talladega%2C+AL+35160%2C+USA!5e0!3m2!1sbn!2sbd!4v1460452919256"></iframe>
+                <iframe width="100%" height="450" frameborder="0" allowfullscreen="" style="border:0" src="https://maps.google.com/maps?q=Via%20brecce%20bianche%202-8,%20Ancona&t=&z=13&ie=UTF8&iwloc=&output=embed" ></iframe>
               </div>
               <div class="aa-contact-top-right">
                 <h2>Contact</h2>
@@ -206,8 +192,7 @@
           <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="aa-footer-left">
-               <p>Designed by <a rel="nofollow" href="http://www.markups.io/">MarkUps.io</a></p>
-              </div>
+               <p>Ideato dal team di RentAdvisor</p></div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="aa-footer-middle">
@@ -219,11 +204,9 @@
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12">
               <div class="aa-footer-right">
-                <a href="#">Home</a>
-                <a href="#">Support</a>
-                <a href="#">License</a>
-                <a href="#">FAQ</a>
-                <a href="#">Privacy & Term</a>
+                <a href="index.html">Home</a>
+                <a href="faq.html">FAQ</a>
+                <a href="contact.html">CONTATTI</a>
               </div>
             </div>            
           </div>
