Create pagine inserisci annuncio e catalogo
Inoltre aggiunta anche la caparra come attributo di annuncio del db

--- a/RentAdvisor/RentAdvisor/catalogo.html
+++ b/RentAdvisor/RentAdvisor/catalogo.html
@@ -99,8 +99,8 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
-                        <li class="active"><a href="index.html">HOME</a></li>
-                        <li> <a href="catalogo.html">CATALOGO</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li class="active"><a href="catalogo.html">CATALOGO</a></li>
                         <li><a href="contact.html">CONTATTI</a></li>
                         <li><a href="faq.html">FAQ</a></li>
                     </ul>
@@ -150,7 +150,7 @@
     </section>
     <!-- End slider  -->
 
-    <!-- Latest property -->
+    <!-- Catalogo -->
     <section id="aa-latest-property">
         <div class="container">
             <div class="aa-latest-property-area">
