Aggiunte al template le navbar per i vari tipi di utente

--- a/codice_di_supporto/html/template.html
+++ b/codice_di_supporto/html/template.html
@@ -80,6 +80,187 @@
   </header>
   <!-- End header section -->
 
+  <!-- Utilizzare questo header per le pagine del PROPRIETARIO-->
+  <!-- Start header section
+  <header id="aa-header">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="aa-header-area">
+            <div class="row">
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <div class="aa-header-left">
+                  <div class="aa-telephone-no">
+                    <span class="fa fa-phone"></span>
+                    123 456 7890
+                  </div>
+                  <div class="aa-email hidden-xs">
+                    <span class="fa fa-envelope-o"></span> info@rentadvisor.com
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <div class="aa-header-right">
+                  <a href="index.html" class="aa-login"><span class="fa fa-user"></span>  PROPRIETARIO</a> |
+                  <a href="#" class="aa-login"><span class="fa fa-envelope"></span> </a>|
+                  <a href="#" class="aa-login"><span class="fa fa-edit"></span> </a>|
+                  <a href="#" class="aa-login"><span class="fa fa-sign-out"></span> </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+   End header section -->
+
+
+
+
+  <!-- Utilizzare questo header per le pagine dello STUDENTE-->
+  <!-- Start header section
+  <header id="aa-header">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="aa-header-area">
+            <div class="row">
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <div class="aa-header-left">
+                  <div class="aa-telephone-no">
+                    <span class="fa fa-phone"></span>
+                    123 456 7890
+                  </div>
+                  <div class="aa-email hidden-xs">
+                    <span class="fa fa-envelope-o"></span> info@rentadvisor.com
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <div class="aa-header-right">
+                  <a href="index.html" class="aa-login"><span class="fa fa-user"></span>  STUDENTE</a> |
+                  <a href="#" class="aa-login"><span class="fa fa-envelope"></span> </a>|
+                  <a href="#" class="aa-login"><span class="fa fa-edit"></span> </a>|
+                  <a href="#" class="aa-login"><span class="fa fa-sign-out"></span> </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+  End header section -->
+
+
+  <!--Utilizzare questo header per le pagine dell' ADMIN-->
+  <!-- Start header section
+  <header id="aa-header">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="aa-header-area">
+            <div class="row">
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <div class="aa-header-left">
+                  <div class="aa-telephone-no">
+                    <span class="fa fa-phone"></span>
+                    123 456 7890
+                  </div>
+                  <div class="aa-email hidden-xs">
+                    <span class="fa fa-envelope-o"></span> info@rentadvisor.com
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-sm-6 col-xs-6">
+                <div class="aa-header-right">
+                  <a href="index.html" class="aa-login"><span class="fa fa-user"></span>  ADMIN</a>
+                  <a href="#" class="aa-login"><span class="fa fa-sign-out"></span> </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+    End header section -->
+
+
+  <!-- Start menu section -->
+  <section id="aa-menu-area">
+    <nav class="navbar navbar-default main-navbar" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!-- LOGO -->
+          <!-- Text based logo -->
+          <a class="navbar-brand aa-logo" href="index.html"> <span>RentAdvisor</span> </a>
+          <!-- Image based logo -->
+          <!-- <a class="navbar-brand aa-logo-img" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
+            <!--     IMPORTANTE: MODIFICARE I LINK DELLA NAVBAR IN BASE ALL'UTENTE PER IL QUALE STAI CREANDO LA PAGINA -->
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="catalogo.html">CATALOGO</a></li>
+            <li class="active"><a href="#">AREA PERSONALE</a></li>
+            <li><a href="contact.html">CONTATTI</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+  </section>
+  <!-- End menu section -->
+
+  <!-- Start slider  -->
+  <section id="aa-slider">
+    <div class="aa-slider-area">
+      <!-- Top slider -->
+      <div class="aa-top-slider">
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Milano.jpg" alt="img">
+        </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Bologna.jpeg" alt="img">
+        </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Ancona.jpeg" alt="img">
+        </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Lecce.jpeg" alt="img">
+        </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Pescara.jpeg" alt="img">
+        </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Roma.jpeg" alt="img">
+        </div>
+        <!-- / Top slider single slide -->
+      </div>
+    </div>
+  </section>
+  <!-- End slider  -->
+
   <!-- Footer -->
   <footer id="aa-footer">
     <div class="container">
