modifica html file faq e properties-detail

--- a/RentAdvisor/RentAdvisor/faq.html
+++ b/RentAdvisor/RentAdvisor/faq.html
@@ -64,7 +64,7 @@
                     1-900-523-3564
                   </div>
                   <div class="aa-email hidden-xs">
-                    <span class="fa fa-envelope-o"></span> info@markups.com
+                    <span class="fa fa-envelope-o"></span> info@rentadvisor.com
                   </div>
                 </div>              
               </div>
@@ -101,33 +101,11 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
-            <li><a href="index.html">HOME</a></li>
-             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="properties.html">PROPERTIES <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="properties.html">PROPERTIES</a></li>
-                <li><a href="properties-detail.html">PROPERTIES DETAIL</a></li>                                            
-              </ul>
-            </li>
-            <li><a href="gallery.html">GALLERY</a></li>                                         
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">BLOG <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="blog-archive.html">BLOG</a></li>
-                <li><a href="blog-single.html">BLOG DETAILS</a></li>                                            
-              </ul>
-            </li>
-            <li><a href="contact.html">CONTACT</a></li>
-            <li class="active"><a href="#">FAQ</a></li>
-            <!-- <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">PAGES <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">                
-                <li><a href="properties-detail.html">PRODUCT DETAILS</a></li>
-                <li><a href="blog-single.html">BLOG DETAILS</a></li>                
-                <li class="active"><a href="404.html">404 PAGE</a></li>                
-              </ul>
-            </li> -->
-          </ul>                          
+            <li class="active"><a href="index.html">HOME</a></li>
+            <li><a href="catalog.html"> CATALOGO</a></li>
+            <li><a href="contact.html">CONTATTI</a></li>
+            <li><a href="#">FAQ</a></li>
+            </ul>                          
         </div><!--/.nav-collapse -->       
       </div>          
     </nav> 
@@ -151,16 +129,30 @@
     </div>
   </section> 
   <!-- End Proerty header  -->
-  <section id="aa-error">
+  <section id="aa-blog">
     <div class="container">
-      <row>
+      <div class="row">
         <div class="col-md-12">
-            <h2>FAQ</h2>
-            <p><span class="fa fa-warning"></span>Oops! The Page you requested was not found!</p>
-            <a href="#">Back Home</a>
-          </div>
+			<div class="aa-title">
+				<h2>FAQ</h2>
+				<p>Domande frequenti</p>
+				<span></span>
+			</div>
+				<fieldset style="border: 1px solid black; padding-top:40px;">
+				<div class="aa-blog-area">
+				<ol>
+					<li><h3>DOMANDA 1</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p></li>
+					<li><h3>DOMANDA 2</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>
+					</li><li><h3>DOMANDA 3</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim molestiae vero ducimus quibusdam odit vitae.</p>
+				</li></ol>
+				</div>
+				</fieldset>
+				
+		  </div>
         </div>
-      </row>
     </div>
   </section>
 
@@ -174,7 +166,7 @@
           <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="aa-footer-left">
-               <p>Designed by <a rel="nofollow" href="http://www.markups.io/">MarkUps.io</a></p>
+               <p>Ideato dal team di RentAdvisor</p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -187,11 +179,10 @@
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12">
               <div class="aa-footer-right">
-                <a href="#">Home</a>
-                <a href="#">Support</a>
-                <a href="#">License</a>
-                <a href="#">FAQ</a>
-                <a href="#">Privacy & Term</a>
+                <a href="index.html">Home</a>
+                <a href="catalog.html">Catalogo</a>
+                <a href="faq.html">FAQ</a>
+                <a href="contatti.html">Contatti</a>
               </div>
             </div>            
           </div>
