--- a/codice_di_supporto/html/template.html
+++ b/codice_di_supporto/html/template.html
@@ -79,7 +79,25 @@
     </div>
   </header>
   <!-- End header section -->
-
+  
+  <!-- Start Proerty header  -->
+  <section id="aa-property-header">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="aa-property-header-inner">
+            <h2>Pagina delle FAQ</h2>
+            <ol class="breadcrumb">
+            <li><a href="index.html">HOME</a></li>            
+            <li class="active">FAQ</li>
+          </ol>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> 
+  <!-- End Proerty header  -->
+  
   <!-- Footer -->
   <footer id="aa-footer">
     <div class="container">
