--- a/RentAdvisor/RentAdvisor/contact.html
+++ b/RentAdvisor/RentAdvisor/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>RentAdvisor | Contatti</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/home_house.png" type="image/x-icon">
    
     
     <!-- Font awesome -->
@@ -72,7 +72,7 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="aa-header-right">
-                  <a href="register.html" class="aa-register">Registrazione</a>
+                  <a href="register.html" class="aa-register">Registrati</a>
                   <a href="signin.html" class="aa-login">Accesso</a>
                 </div>
               </div>
@@ -103,9 +103,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
-            <li class="active"><a href="index.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li> <a href="catalog.html">CATALOGO</a></li>
-            <li ><a href="contact.html">CONTATTI</a></li>
+            <li class="active"><a href="contact.html">CONTATTI</a></li>
             <li><a href="faq.html">FAQ</a></li>            
           </ul>                          
         </div><!--/.nav-collapse -->       
@@ -143,7 +143,7 @@
                 <iframe width="100%" height="450" frameborder="0" allowfullscreen="" style="border:0" src="https://maps.google.com/maps?q=Via%20brecce%20bianche%202-8,%20Ancona&t=&z=13&ie=UTF8&iwloc=&output=embed" ></iframe>
               </div>
               <div class="aa-contact-top-right">
-                <h2>Contact</h2>
+                <h2>Contatti</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae placeat aspernatur aperiam, quisquam voluptas enim tempore ab itaque nam modi eos corrupti distinctio nobis labore dolorum quae tenetur. Sapiente, sequi.</p>
                 <ul class="contact-info-list">
                   <li> <i class="fa fa-phone"></i> 071xxxxxx</li>
