--- a/RentAdvisor/RentAdvisor/faq.html
+++ b/RentAdvisor/RentAdvisor/faq.html
@@ -95,16 +95,16 @@
           </button>
           <!-- LOGO -->                                               
           <!-- Text based logo -->
-          <a class="navbar-brand aa-logo" href="index.html"> Home <span>Property</span></a>
+          <a class="navbar-brand aa-logo" href="index.html"><span>RentAdvisor</span></a>
           <!-- Image based logo -->
           <!-- <a class="navbar-brand aa-logo-img" href="index.html"><img src="img/logo.png" alt="logo"></a> -->                     
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
-            <li class="active"><a href="index.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="catalog.html"> CATALOGO</a></li>
             <li><a href="contact.html">CONTATTI</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li class="active"><a href="#">FAQ</a></li>
             </ul>                          
         </div><!--/.nav-collapse -->       
       </div>          
