--- a/RentAdvisor/RentAdvisor/properties-detail.html
+++ b/RentAdvisor/RentAdvisor/properties-detail.html
@@ -71,8 +71,8 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="aa-header-right">
-                  <a href="register.html" class="aa-register">Register</a>
-                  <a href="signin.html" class="aa-login">Login</a>
+                  <a href="register.html" class="aa-register">Registrati</a>
+                  <a href="signin.html" class="aa-login">Accedi</a>
                 </div>
               </div>
             </div>
@@ -96,7 +96,7 @@
           </button>
           <!-- LOGO -->                                               
           <!-- Text based logo -->
-          <a class="navbar-brand aa-logo" href="index.html"> Home <span>Property</span></a>
+          <a class="navbar-brand aa-logo" href="index.html"><span>RentAdvisor</span></a>
           <!-- Image based logo -->
           <!-- <a class="navbar-brand aa-logo-img" href="index.html"><img src="img/logo.png" alt="logo"></a> -->                     
         </div>
